<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context="com.dicoding.lukman.catalogmovie.activiy.DetailMovie">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="22dp">

            <FrameLayout
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_poster"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>


            <android.support.v7.widget.Toolbar
                app:layout_collapseMode="pin"
                app:theme="@style/MyToolbarLight"
                android:id="@+id/toolbar_main"
                android:elevation="7dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="?attr/homeAsUpIndicator">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:elevation="3dp"
                android:background="@color/texticon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="18dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:paddingBottom="2dp"
                        android:background="@color/texticon"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/secondaryText"
                            android:text="@string/vote"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                       <TextView
                           android:textStyle="bold"
                           android:text="@string/popularity"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:background="@color/texticon"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tv_vote_count"
                            tools:text="vote count"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tv_popularity"
                            tools:text="@string/popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:paddingTop="8dp"
                        android:background="@color/texticon"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <TextView
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            tools:text="6.1"
                            android:id="@+id/tv_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_star_black_24dp"
                            tools:text="@string/rated"
                            android:layout_width="16dp"
                            android:layout_height="16dp" />
                        <TextView
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/colorPrimaryDark"
                            android:id="@+id/tv_release_date"
                            tools:text="tanggal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_favorite"
                        android:textColor="@color/texticon"
                        android:text="@string/rate"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <View
                        android:layout_marginTop="18dp"
                        android:background="@color/divider"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/texticon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24sp"
                            android:text="@string/sinopsis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tv_sinopsis"
                            android:textColor="@color/secondaryText"
                            tools:text="@string/sinopsis"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>



    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>